# odincode

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MODULARIZATION_REPORT.md  README.md  REFACTORING_SUCCESS.txt  opencode.json  verify_ml_integration.rs
agents/: Cargo.toml
agents/src/: code_generator.rs  code_understanding.rs  lib.rs  llm_integration.rs  mod.rs  refactorer.rs
agents/src/coordinator/: mod.rs
agents/src/coordinator/executors/: mod.rs
agents/src/documenter/: analysis.rs  generator.rs  mod.rs  types.rs
agents/src/ltmc_integration/: feedback_processing.rs  metrics.rs  mod.rs  session_management.rs  types.rs
agents/src/vulnerability_scanner/: config.rs  mod.rs  utils.rs
agents/src/vulnerability_scanner/ml_detector/: feature_extractor.rs  mod.rs  model_manager.rs  prediction_engine.rs  types.rs
agents/src/vulnerability_scanner/pattern_detector/: context_validator.rs  matcher.rs  mod.rs  pattern_loader.rs  types.rs
agents/src/vulnerability_scanner/semantic_analyzer/: feature_extractor.rs  gnn_inference.rs  graph_builder.rs  mod.rs  pattern_matcher.rs  types.rs
agents/src/vulnerability_scanner/utils_modules/: code_analyzers.rs  function_extractors.rs  mod.rs  types.rs  vulnerability_helpers.rs
agents/tests/: ltmc_integration_test.rs  vulnerability_scanner_integration.rs
api/: Cargo.toml
api/src/: lib.rs  mod.rs
api/src/handlers/: mod.rs
api/src/server/: mod.rs
core/: Cargo.toml  build.rs
core/src/: action_history.rs  advanced_features.rs  config.rs  database.rs  database_queries_old.rs  file_metadata.rs  graph_database.rs  integration_test.rs  language_parsing.rs  large_codebase_mapper.rs  lib.rs  llm_integration.rs  llm_integration_comprehensive_tests.rs  llm_integration_tests.rs  ml_integration_e2e_simple.rs  ml_integration_e2e_test.rs  ml_integration_minimal_test.rs  ml_integration_test.rs  multi_language_test.rs  rag_database.rs  semantic_analysis.rs  verify_ml_integration.rs  verify_ml_integration_test.rs
core/src/database_queries/: convert_types.rs  execute_graph_queries.rs  execute_metadata_queries.rs  execute_rag_queries.rs  execute_stats.rs  find_related_entities.rs  mod.rs  query_interface.rs  query_types.rs
core/src/language_analyzers/: mod.rs
core/src/language_analyzers/compiled/: c_analyzer.rs  cpp_analyzer.rs  go_analyzer.rs  java_analyzer.rs  mod.rs  rust_analyzer.rs  swift_analyzer.rs
core/src/language_analyzers/core/: analysis_utils.rs  analyzer_manager.rs  base_analyzer.rs  mod.rs
core/src/language_analyzers/functional/: clojure_analyzer.rs  haskell_analyzer.rs  mod.rs  scala_analyzer.rs
core/src/language_analyzers/interpreted/: javascript_analyzer.rs  mod.rs  php_analyzer.rs  python_analyzer.rs  ruby_analyzer.rs  typescript_analyzer.rs
core/src/language_analyzers/specialized/: dart_analyzer.rs  lua_analyzer.rs  mod.rs  objc_analyzer.rs  r_analyzer.rs  shell_analyzer.rs
core/src/large_codebase_mapper/: lib.rs
core/src/large_codebase_mapper/dependencies/: mod.rs
core/src/large_codebase_mapper/entities/: mod.rs
core/src/large_codebase_mapper/storage/: mod.rs
core/src/ml_integration/: facade.rs  integration.rs  manager.rs  manager_test.rs  metadata.rs  mod.rs  operations.rs  tests.rs
core/src/ml_integration/config/: manager.rs  mod.rs
core/src/ml_integration/core/: manager.rs  mod.rs
core/src/ml_integration/llm/: integration.rs  mod.rs
core/src/ml_integration/model_management/: exporter.rs  importer.rs  mod.rs  performance_tracker.rs  registry.rs
core/src/ml_integration/trainer/: mod.rs  supervised.rs  unsupervised.rs
core/src/ml_integration/training/: mod.rs  orchestrator.rs
core/src/simple_ltmc/: api.rs  graph.rs  mod.rs  models.rs  search.rs  storage.rs  tests.rs
core/src/symbol_table/: mod.rs
core/src/symbol_table/core/: mod.rs  symbol_manager.rs  symbol_types.rs  table_manager.rs
core/src/symbol_table/extraction/: ast_extractor.rs  language_parsers.rs  mod.rs  signature_analyzer.rs
core/src/symbol_table/references/: hierarchy_analyzer.rs  mod.rs  reference_manager.rs  relationship_manager.rs
database_queries/: converters.rs  executors.rs  interface.rs  mod.rs  tests.rs  types.rs
databases/: Cargo.toml
databases/src/: faiss.rs  lib.rs  neo4j.rs  redis.rs  sqlite.rs
docs/: CHAT_STUCK_INVESTIGATION.md  CLAUDE_CODE_SYSTEM_PROMPTS_LEAK.md  CONTRACT.md  CORE_LOOP.md  CORE_LOOP_TEMPORAL_IMPLEMENTATION_PLAN.md  CURRENT_CAPABILITIES.md  ENGINEERING_DECISIONS.md  EXTERNAL_TOOLS_API.md  GLM_COMPLETE_CAPABILITIES.md  IMPLEMENTATION_GAP_ANALYSIS.md  ODINCODE_ARCHITECTURE.md  ODINCODE_DB_ARCHITECTURE.md  ODINCODE_WORKFLOW.md  OPENCODE_ANALYSIS.md  PHASE_0_5_2_COMPLETION_REPORT.md  PHASE_0_5_2_CONSTRAINT_DECISION.md  PHASE_0_5_2_STEP_4_ACT.md  PHASE_0_5_EXECUTION_MEMORY.md  PHASE_0_6_COMPLETION_REPORT.md  PHASE_0_6_EVIDENCE_QUERIES.md  PHASE_10_TOOL_DISCOVERY.md  PHASE_11_TUI_LAYOUT_DESIGN.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_EDITOR_UI.md  PHASE_3_DECISIONS.md  (+36 more)
ltmc/: Cargo.toml
ltmc/src/: config.rs  features.rs  lib.rs  mod.rs
ltmc/src/bridges/: mod.rs
ltmc/src/bridges/memory_search/: core.rs  mod.rs  search.rs  storage.rs
ltmc/src/manager/: mod.rs
ltmc/src/search/: by_type.rs  examples.rs  ltmc.rs  mod.rs  rust.rs
ltmc/src/search/core/: mod.rs
ltmc/tests/: feature_detection_test.rs
tools/: Cargo.toml
tools/benches/: anthropic_bench.rs
tools/src/: lib.rs  tool_models.rs
tools/src/linters/: mod.rs
tools/src/manager/: mod.rs
tools/src/manager/executors/: mod.rs  subprocess.rs  tests.rs
tools/src/mcp/: client.rs  connection.rs  discovery.rs  mod.rs  models.rs  protocol.rs
tools/src/multi_edit/: mod.rs
tui/: Cargo.toml  Cargo.toml.tmp
tui/examples/: tabbed_terminal_demo.rs
tui/src/: lib.rs  mod.rs
tui/src/app/: enhanced_terminal.rs  mod.rs  tabbed_terminal.rs  terminal_integration_tests.rs
tui/src/app/key_handlers/: mod.rs
tui/src/app/terminal_integration/: auto_completion_tests.rs  command_execution_tests.rs  creation_tests.rs  event_handling_tests.rs  mod.rs
tui/src/ui/: mod.rs
tui/tests/: portable_pty_test.rs
(+179 files in other folders)
