[workspace]
resolver = "2"
members = [
    "core",
    "agents", 
    "tools",
    "ltmc",
    "databases",
    "api",
    "tui"
]



[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["OdinCode Development Team"]
license = "MIT"
repository = "https://github.com/feanor/odincode"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# HTTP server and client
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Testing dependencies
tempdir = "0.3"

# Tree-sitter dependencies for consistent versioning
tree-sitter = "0.20"

# Database connections
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
rusqlite = { version = "0.30", features = ["bundled"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.16", features = ["rt_tokio_1"] }
neo4rs = "0.7"

# Vector database  
faiss = { version = "0.12" }

# Machine Learning libraries
linfa = { version = "0.8", features = ["blas"] }
linfa-clustering = { version = "0.8" }
linfa-linear = { version = "0.8" }
linfa-trees = { version = "0.8" }
linfa-nn = { version = "0.8" }
linfa-svm = { version = "0.8" }
linfa-bayes = { version = "0.8" }
linfa-logistic = { version = "0.8" }
linfa-elasticnet = { version = "0.8" }
linfa-reduction = { version = "0.8" }
linfa-tsne = { version = "0.8" }
linfa-ica = { version = "0.8" }
linfa-pls = { version = "0.8" }
linfa-ftrl = { version = "0.8" }
linfa-hierarchical = { version = "0.8" }
linfa-ensemble = { version = "0.8" }
linfa-preprocessing = { version = "0.8" }
polars = { version = "0.41", features = ["lazy", "temporal", "strings", "parquet", "csv"] }
ndarray = { version = "0.16", features = ["blas", "serde"] }
smartcore = { version = "0.4", features = ["serde"] }
# Candle ML framework for deep learning
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
candle-transformers = { version = "0.9" }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Testing
tempfile = "3.12"

# Performance
dashmap = "5.5"
arc-swap = "1.6"
rayon = "1.8"

# Memory optimization dependencies
smallvec = { version = "1.13", features = ["union", "const_generics", "serde"] }
arrayvec = "0.7"

# Random number generation
rand = "0.8"

# Streaming and async utilities
async-stream = "0.3"

# Text processing and regex
regex = "1.10"

# Additional HTTP and model client dependencies
hyper = "1.0"
http = "1.0"

# Number utilities
num = "0.4"

[package]
name = "odincode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["simple-ltmc"]
# LTMC feature flags for optional compilation
ltmc-lite = ["odincode-ltmc/ltmc-lite"]
ltmc-full = ["odincode-ltmc/ltmc-full"]
ltmc-redis = ["odincode-ltmc/ltmc-redis"]
ltmc-neo4j = ["odincode-ltmc/ltmc-neo4j"]
ltmc-faiss = ["odincode-ltmc/ltmc-faiss"]
ltmc-all = ["ltmc-full", "ltmc-redis", "ltmc-neo4j", "ltmc-faiss"]
# Simple LTMC feature for local-only operation
simple-ltmc = []

[dependencies]
# Main binary depends on all workspace members
odincode-core = { path = "core" }
odincode-agents = { path = "agents" }
odincode-tools = { path = "tools" }
odincode-ltmc = { path = "ltmc" }
odincode-databases = { path = "databases" }
odincode-api = { path = "api" }
odincode-tui = { path = "tui" }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
anyhow.workspace = true
uuid.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
regex = "1.10"
chrono.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true