[package]
name = "odincode-agents"
version = "0.1.0"
edition = "2021"
authors = ["OdinCode Development Team"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
odincode-core = { path = "../core" }
odincode-ltmc = { path = "../ltmc" }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"