[package]
name = "odincode-core"
version = "0.1.0"
edition = "2021"
authors = ["OdinCode Development Team"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
smallvec = { workspace = true }
axum = { workspace = true }
faiss = { workspace = true }

# Database dependencies
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
bincode = "1.3"

# Tree-sitter dependencies for multi-language parsing
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"  # Note: This provides both typescript and tsx
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-php = "0.20"
# tree-sitter-swift = "0.20"  # Removed due to version conflicts
# tree-sitter-kotlin = "0.20"  # Removed due to version conflicts
tree-sitter-scala = "0.20"
# tree-sitter-r = "0.20"  # Removed due to version conflicts
tree-sitter-bash = "0.20"

# Testing dependencies
tempdir = { workspace = true }

# ML dependencies
linfa = { workspace = true }
linfa-clustering = { workspace = true }
linfa-linear = { workspace = true }
linfa-trees = { workspace = true }
linfa-nn = { workspace = true }
linfa-svm = { workspace = true }
linfa-bayes = { workspace = true }
linfa-logistic = { workspace = true }
linfa-elasticnet = { workspace = true }
linfa-reduction = { workspace = true }
linfa-tsne = { workspace = true }
linfa-ica = { workspace = true }
linfa-pls = { workspace = true }
linfa-ftrl = { workspace = true }
linfa-hierarchical = { workspace = true }
linfa-ensemble = { workspace = true }
linfa-preprocessing = { workspace = true }
polars = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = "0.5"
smartcore = { workspace = true }
rand = { workspace = true }
rand_xoshiro = "0.6"
# Candle ML framework for deep learning
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# LTMC dependency
odincode-ltmc = { path = "../ltmc" }

# Databases dependency
odincode-databases = { path = "../databases" }

# HTTP client for LLM integration
reqwest = { version = "0.11", features = ["json"] }

# Configuration management
config = "0.13"
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
tempfile = "3.8"
itertools = "0.14.0"

# Build dependencies for BLAS/LAPACK configuration
[build-dependencies]
pkg-config = "0.3"

# Feature flags
[features]
default = []
simple-ltmc = []
