[package]
name = "odincode-tui"
version = "0.1.0"
edition = "2021"
authors = ["OdinCode Development Team"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
odincode-core = { path = "../core" }
odincode-ltmc = { path = "../ltmc" }
odincode-agents = { path = "../agents" }
odincode-tools = { path = "../tools" }